# IBMZ-Datathon

./: .dockerignore  .env.example  .gitignore  API_Changes_Docs.yaml  API_docs.yaml  Dockerfile  Makefile  README.md  frontend_plan.yaml  pyproject.toml  requirements.txt  requirements_api_gateway.txt  run_frontend.py
API_Gateway/: api_gateway.py  test_all_apis.py  test_all_apis_2.py
agent/: api_gateway.py  config.py  schemas.py  utils.py
agent/errors/: error.py
agent/form_agent/: prompts.py  schemas.py  utils.py
db/: docker-compose.yml  populate.py
db/db/: hp.sql
frontend/: README.md  __init__.py  app.py
frontend/components/: __init__.py  audio_recorder.py  patient_card.py
frontend/models/: __init__.py  domain.py
frontend/pages/: 1_📋_Main_Dashboard.py  2_👤_Patient_Page.py  3_📝_New_Form.py  4_🎙️_Live_Form.py  __init__.py
frontend/services/: __init__.py  ai_extractor.py  api_client.py
frontend/utils/: config.py  state.py
tests/agent/: test_application_domain.py  test_env_vars.py  test_llm_query.py
